# realms-arbitration-layer

./: .gitignore  README.md  demo-hackathon-output.txt  demo-hackathon.sh
ai-arbitration-dao/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
ai-arbitration-dao/.github/workflows/: python-ci.yml
ai-arbitration-dao/deploy/systemd/: README.md  ai-arb-seat@.service
ai-arbitration-dao/docs/adr/: 0001-runtime-and-tooling.md
ai-arbitration-dao/src/ai_arbitration_dao/: __init__.py  __main__.py  cli.py  config.py  types.py
ai-arbitration-dao/src/ai_arbitration_dao/agents/: __init__.py  base.py  claude.py  minimax.py  openai.py
ai-arbitration-dao/src/ai_arbitration_dao/commands/: __init__.py  agent_health_check.py  bind_resolver.py  bootstrap.py  create_ruling_proposal.py  execute_ruling_proposal.py  reconcile_agent_runtime.py  submit_vote.py  verify_ruling_status.py
ai-arbitration-dao/src/ai_arbitration_dao/domain/: __init__.py  audit_artifact.py  dispute_snapshot.py  ruling_payload.py  status.py
ai-arbitration-dao/src/ai_arbitration_dao/observability/: __init__.py  logging.py  redaction.py
ai-arbitration-dao/src/ai_arbitration_dao/orchestration/: __init__.py  operator_authorization.py  pipeline.py  proposal_authorization.py  reconciliation.py  round_safety.py
ai-arbitration-dao/src/ai_arbitration_dao/runtime/: __init__.py  health_api.py  worker.py
ai-arbitration-dao/src/ai_arbitration_dao/solana/: __init__.py  governance_adapter.py  pubkeys.py  rpc_client.py  safe_treasury_adapter.py
ai-arbitration-dao/tests/e2e/: test_reconcile_status.py
ai-arbitration-dao/tests/integration/: test_audit_artifact.py  test_cli_json_output.py
ai-arbitration-dao/tests/unit/: test_agent_health_check_command.py  test_bootstrap_command.py  test_cli_contract.py  test_continuous_readiness.py  test_create_ruling_proposal_command.py  test_execute_ruling_proposal_command.py  test_operator_authorization.py  test_proposal_authorization.py  test_python_agent_runtime.py  test_realms_governance.py  test_reconcile_agent_runtime_command.py  test_resolver_binding.py  test_round_safety.py  test_ruling_payload.py  test_secret_redaction.py  test_structured_observability.py  test_submit_vote_command.py  test_verify_ruling_status_command.py  test_worker_runtime_env.py
arbitration-layer/programs/safe-treasury/: Cargo.toml  MISSING_FEATURES_TDD.md  REFACTOR_SUMMARY.md
arbitration-layer/programs/safe-treasury/.certora_internal/: latest
governance-ui/: README.md  (+3 more)
(+128 files in other folders)
