[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ai-arbitration-dao"
version = "0.1.0"
description = "Python-first automation and runtime tooling for AI Arbitration DAO MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "pydantic-settings>=2.7.1",
  "solana>=0.36.6",
  "solders>=0.27.1",
  "structlog>=24.4.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.6",
]

[project.scripts]
ai-arbitration-dao = "ai_arbitration_dao.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_arbitration_dao"]

[tool.hatch.build.targets.sdist]
include = [
  "src/ai_arbitration_dao",
  "tests",
  "README.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
packages = ["ai_arbitration_dao"]
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/ai_arbitration_dao"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
